a lot of asthetic changes

--- a/_includes/head-custom.html
+++ b/_includes/head-custom.html
@@ -1,7 +1,7 @@
 
 
 
-<nav style="display:flex; align-items:center; justify-content:space-between; margin-bottom:1.5rem; padding:0.5rem 1rem; background-color:#F8F8F8;">
+<nav style="display:flex; align-items:center; justify-content:space-between; margin-bottom:1.5rem; padding:0.5rem 1rem; background-color:#9E1B32;">
   
 
   
@@ -11,7 +11,7 @@
   </a>
 
   <!-- Links on the right -->
-  <ul style="list-style:none; display:flex; gap:1.5rem; margin:0; padding:0;">
+  <ul style="list-style:none; display:flex; gap:1.5rem; margin:1; padding:0;">
     <li>
       <a href="{{ '/' | relative_url }}" {% if page.url == '/' %}style="text-decoration:underline;"{% endif %}>Home</a>
     </li>
