--- a/_includes/index.html
+++ b/_includes/index.html
@@ -8,20 +8,20 @@
     <link rel="stylesheet" type="text/css" media="screen" href="/assets/css/style.css?v=f3f939460f57d047f6c3b9f63994c02fa15a4e6d">
 
 <!-- Begin Jekyll SEO tag v2.8.0 -->
-<title>About | The OPS Lab</title>
+<!-- <title>The OPS Lab | Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description.</title> -->
 <meta name="generator" content="Jekyll v3.9.5" />
-<meta property="og:title" content="About" />
+<meta property="og:title" content="The OPS Lab" />
 <meta property="og:locale" content="en_US" />
 <meta name="description" content="Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description." />
 <meta property="og:description" content="Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description." />
-<link rel="canonical" href="http://localhost:4000/about/" />
-<meta property="og:url" content="http://localhost:4000/about/" />
+<link rel="canonical" href="http://localhost:4000/" />
+<meta property="og:url" content="http://localhost:4000/" />
 <meta property="og:site_name" content="The OPS Lab" />
 <meta property="og:type" content="website" />
 <meta name="twitter:card" content="summary" />
-<meta property="twitter:title" content="About" />
+<meta property="twitter:title" content="The OPS Lab" />
 <script type="application/ld+json">
-{"@context":"https://schema.org","@type":"WebSite","description":"Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description.","headline":"About","name":"The OPS Lab","url":"http://localhost:4000/about/"}</script>
+{"@context":"https://schema.org","@type":"WebSite","description":"Write an awesome description for your new site here. You can edit this line in _config.yml. It will appear in your document head meta (for Google search results) and in your feed.xml site description.","headline":"The OPS Lab","name":"The OPS Lab","url":"http://localhost:4000/"}</script>
 <!-- End Jekyll SEO tag -->
 
     
@@ -39,7 +39,7 @@
   <!-- Links on the right -->
   <ul style="list-style:none; display:flex; gap:1.5rem; margin:1; padding:0;">
     <li>
-      <a href="/" >Home</a>
+      <a href="/" style="text-decoration:underline;">Home</a>
     </li>
     <li>
       <a href="/contact/" >Contact</a>
@@ -83,17 +83,17 @@
     <!-- MAIN CONTENT -->
     <div id="main_content_wrap" class="outer">
       <section id="main_content" class="inner">
-        <p>This is the base Jekyll theme. You can find out more info about customizing your Jekyll theme, as well as basic Jekyll usage documentation at <a href="https://jekyllrb.com/">jekyllrb.com</a></p>
+        <ul class="post-list"><li>
+<span class="post-meta">Sep 1,  1-SEP-2025</span>
+<h3>
+    <a class="post-link" href="/jekyll/update/2025/09/01/welcome-to-jekyll.html">
+    Welcome to Jekyll!
+    </a>
+</h3>
+    <p>You’ll find this post in your <code class="language-plaintext highlighter-rouge">_posts</code> directory. Go ahead and edit it and re-build the site to see your changes. :) You can rebuild the site in many different ways, but the most common way is to run <code class="language-plaintext highlighter-rouge">jekyll serve</code>, which launches a web server and auto-regenerates your site when a file is updated.</p>
 
-<p>You can find the source code for Minima at GitHub:
-<a href="https://github.com/jekyll">jekyll</a> /
-<a href="https://github.com/jekyll/minima">minima</a></p>
 
-<p>You can find the source code for Jekyll at GitHub:
-<a href="https://github.com/jekyll">jekyll</a> /
-<a href="https://github.com/jekyll/jekyll">jekyll</a></p>
-
-
+</li></ul>
       </section>
     </div>
 
