--- a/_layouts/index.html
+++ b/_layouts/index.html
@@ -1,7 +1,15 @@
 ---
 layout: default
 ---
+
+
+
+<h1 id="project_title">{{ site.title | default: site.github.repository_name }}</h1>
+<h2 id="project_tagline">{{ site.description | default: site.github.project_tagline }}</h2>
+
 {%- if site.posts.size > 0 -%}
+
+
 
 <ul class="post-list">
 {%- assign date_format = site.minima.date_format | default: "%b %-d, %v" -%}
